<resources>
    <string name="app_name" translatable="false">MindTheClub</string>
    <string name="call_service" translatable="false">Call service</string>
    <string name="contacts">Contacts</string>
    <string name="bluetooth_transport">Bluetooth</string>
    <string name="remove_pending">Remove pending contact</string>
    <string name="new_contact">New Contact</string>
    <string name="delete_group">Remove group</string>
    <string name="clubs">Clubs</string>
    <string name="receiving">Receiving…</string>
    <string name="pending">Pending…</string>
    <string name="send_debug_log">Send Debug Log</string>
    <string name="new_contacts">New</string>
    <string name="request_contact">Request Contact</string>
    <string name="add_member">Add</string>
    <string name="remove_member">Remove</string>
    <string name="select_group">Select 2 or more contacts to create a group</string>
    <string name="group_members">Members</string>
    <string name="new_group">New Group</string>
    <string name="member">Member</string>
    <string name="leave_group">Leave Group</string>
    <string name="leave_group_alert">You will no longer receive messages from this group.</string>
    <string name="backup_settings">Backup settings</string>
    <string name="backup">Backup data</string>
    <string name="group_name">Group Name</string>
    <string name="restore">Restore data</string>
    <string name="profile">Profile</string>
    <string name="select_contacts">Select contact/s to add</string>
    <string name="debug">Share log</string>
    <string name="images">Images</string>
    <string name="creating_club">Club name…</string>
    <string name="adding_club">Club description…</string>
    <string name="video">Video</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="my_profile">My Profile</string>
    <string name="new_club">New Club</string>
    <string name="scan_club">Scan club QR code</string>
    <string name="name_hint">My name</string>
    <string name="save">Save</string>
    <string name="edit_club">Edit Club</string>
    <string name="create_new_club">Create new club</string>
    <string name="club_name_hint">Club name</string>
    <string name="bio_hint">About me</string>
    <string name="description_hint">About the Club</string>
    <string name="share">Invite a friend</string>
    <string name="members">Members</string>
    <string name="add_new_contact">Add new contact</string>
    <string name="add_new_club">Add new club</string>
    <string name="delete_contact">Delete contact</string>
    <string name="delete_club">Delete Club</string>
    <string name="new_contact_requests">New contact requests</string>
    <string name="club_members">Club Members</string>
    <string name="add_message">Do you want to add this contact?</string>
    <string name="contact_not_added">Contact not added</string>
    <string name="delete_message">Do you want to delete this contact?</string>
    <string name="delete_club_message">Do you want to delete this Club?</string>
    <string name="share_profile">Share</string>
    <string name="share_club">Share Club</string>
    <string name="auto_invite_mode">Auto-invite mode</string>
    <string name="show_qr_code">Show QR</string>
    <string name="scan_qr_code">Scan QR</string>
    <string name="share_qr_code">Share QR</string>
    <string name="add_club">Add</string>
    <string name="cancel_club">Cancel</string>
    <string name="share_message">Hi! I\'m using MindTheClub. Tap the link below, it\'ll add me to your contacts if you already have the app, or let you download it if you don\'t.</string>
    <string name="join_message">Join me on MindTheClub!</string>
    <string name="share_via">Share via…</string>
    <string name="this_is_you">This is you!</string>
    <string name="send_debug">Send message using…</string>
    <string name="existing_contact">You already have this contact</string>
    <string name="to_accept_contact">This is already a potential contact</string>
    <string name="key_file">mtc_key.json</string>
    <string name="data_exchange">Data exchange</string>
    <string name="incoming_data">Synchronizing data</string>
    <string name="incoming_audio_call">Incoming Audio call</string>
    <string name="incoming_video_call">Incoming Video call</string>
    <string name="enable_notification">Please enable notifications for MindTheClub</string>
    <string name="accept">Swipe to accept</string>
    <string name="accept2">Accept</string>
    <string name="reject">Decline</string>
    <string name="answer">Answer</string>
    <string name="cancel">Cancel</string>
    <string name="block">Block</string>
    <string name="user_unknown">Unknown user</string>
    <string name="phone_call">Audio call</string>
    <string name="video_call">Video call</string>
    <string name="call_on_hold">On Hold</string>
    <string name="remote_is_busy">User is busy</string>
    <string name="call_declined">Call declined</string>
    <string name="message">Message</string>
    <string name="attach">Attachment</string>
    <string name="microphone" translatable="false">Microphone</string>
    <string name="send">Send</string>
    <string name="delete">Delete</string>
    <string name="new_message">New message</string>
    <string name="new_contact_request">NEW</string>
    <string name="contact_request">Contact request</string>
    <string name="sending">Sending…</string>
    <string name="sent">Sent</string>
    <string name="delivered">Delivered</string>
    <string name="seen">Seen</string>
    <string name="cancelled">Cancelled</string>
    <string name="cancel_send_confirm">Are you sure you want to cancel this send?</string>
    <string name="cancel_transfer_confirm">Are you sure you want to cancel the transfer?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="missed_call">Missed call</string>
    <string name="today">Today</string>
    <string name="now">Now</string>
    <string name="reply">Reply</string>
    <string name="forward">Forward</string>
    <string name="forwarded">forwarded</string>
    <string name="copy">Copy</string>
    <string name="you">You</string>
    <string name="forward_to_peer">Select contacts</string>
    <string name="image">Image</string>
    <string name="view_profile">View Profile</string>
    <string name="add_contact">Add Contact</string>
    <string name="movie">Video</string>
    <string name="file">File</string>
    <string name="gif">GIF</string>
    <string name="sticker">Sticker</string>
    <string name="link">Link</string>
    <string name="typing">Typing…</string>
    <string name="audio">Voice message</string>
    <string name="contact">Contact</string>
    <string name="video_calling">Video calling</string>
    <string name="not_available">User not available</string>
    <string name="no_response">No response</string>
    <string name="connecting">Connecting…</string>
    <string name="busy">Busy</string>
    <string name="block_contact">Block Contact</string>
    <string name="unblock_contact">Unblock Contact</string>
    <string name="unblock">Unblock</string>
    <string name="block_message">Are you sure you want to block this Contact?</string>
    <string name="unblock_message">Are you sure you want to UN-block this Contact?</string>
    <string name="black_list">Black List</string>
    <string name="no_blocked_users">No Blocked Users</string>
    <string name="max_forward_selection">You can select up to %d contacts for forwarding.</string>
    <string name="close">Close</string>
    <string name="info">Info</string>
    <string name="group_member_limit_exceeded">Groups cannot exceed %d members.</string>
    <string name="media_lost">Media not available</string>
    <string name="message_size_limit">50 MB limit for messages to a group, exceeded</string>
    <string name="compressing_video">Preparing video...</string>
    <string name="no_results">No Results</string>
    <string name="connected_and_ready">Connected</string>
    <string name="bug">Bug</string>
    <string name="checking">Checking for eventual pending messages</string>
    <string name="reconnecting">Reconnecting…</string>
    <string name="contacts_header">Contacts</string>
    <string name="about">About</string>
    <string name="options">Options</string>
    <string name="version">Version</string>
    <string name="messages_header">Messages</string>
    <string name="dates">Search by dates</string>
    <string name="search">Search…</string>
    <string name="search2">Search</string>
    <string name="no_answer">No answer</string>
    <string name="call_failed">Call failed</string>
    <string name="connection_failure">Connection failure</string>
    <string name="fullscreen_permission_title">Permission required</string>
    <string name="fullscreen_permission_rationale">To show incoming calls immediately when your phone is locked, this app needs special permission. Please enable \"Appear on top\" or \"Full screen intents\" in the upcoming settings screen.</string>
    <string name="go_to_settings">Go to settings and add permission</string>
    <string name="call_permission_denied">Permission to make calls required</string>
    <string name="system_busy">Already in a call</string>
    <string name="unknown">Unknown</string>
    <string name="save_to_disk">Save</string>
    <string name="save_file_confirm_title">Save file</string>
    <string name="save_file_confirm_message">Save this file to your Downloads folder?</string>
    <string name="file_saved">File saved to Downloads</string>
    <string name="file_save_failed">Failed to save file</string>
    <string name="media_not_available">Failed to save file</string>
    <string name="backup_restore">Backup &amp; Restore</string>
    <string name="manual_backup_title">Manual Backup</string>
    <string name="manual_backup_description">Create a password-encrypted backup file containing your identity, contacts, and optionally your messages. Store it anywhere safe.</string>
    <string name="create_backup">Create Backup</string>
    <string name="restore_backup">Restore from Backup</string>
    <string name="set_backup_password">Set Backup Password</string>
    <string name="enter_backup_password">Enter Backup Password</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="include_messages">Include messages (larger file)</string>
    <string name="password_required">Password is required</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="backup_in_progress">Creating backup…</string>
    <string name="backup_completed">Backup completed successfully</string>
    <string name="backup_failed">Backup failed</string>
    <string name="restore_in_progress">Restoring backup…</string>
    <string name="onboarding_invite_title">Better with friends</string>
    <string name="onboarding_invite_subtitle">MindTheClub connects you directly with the people you invite, and no one else. Send your first invite to start chatting: it\'s the one step that gets the conversation going.</string>
    <string name="onboarding_invite_skip">Skip for now</string>
    <string name="onboarding_perm_title">Before you start</string>
    <string name="onboarding_perm_calls_title">Voice &amp; video calls</string>
    <string name="onboarding_perm_calls_body">MindTheClub needs your microphone and camera so you can talk and see each other during calls. Granting now means calls just work, with nothing to allow mid-call.</string>
    <string name="onboarding_perm_notif_title">Notifications</string>
    <string name="onboarding_perm_notif_body">Allow notifications so you never miss a new message or an incoming call.</string>
    <string name="onboarding_perm_allow">Allow access</string>
    <string name="onboarding_perm_skip">Not now</string>
</resources>