<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/phone_call"
        android:title="@string/phone_call"
        android:icon="@drawable/phone"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/video_call"
        android:title="@string/video_call"
        android:icon="@drawable/video"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_search"
        android:title="@string/search2"
        android:icon="@drawable/ic_search"
        android:iconTint="@color/black"
        app:showAsAction="never"/>

    <item
        android:id="@+id/calendar"
        android:title="@string/dates"
        android:icon="@drawable/calendar"
        android:iconTint="@color/black"
        app:showAsAction="never"/>

</menu>