<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:id="@+id/attach_popup"
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="2dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingBottom="6dp"
            android:clickable="true"
            android:focusable="true">

            <ImageButton
                android:id="@+id/images"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/custom_ripple"
                android:src="@drawable/image"
                android:contentDescription="@string/send"
                app:tint="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/images"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingBottom="6dp"
            android:clickable="true"
            android:focusable="true">

            <ImageButton
                android:id="@+id/movie"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/custom_ripple"
                android:src="@drawable/movie"
                android:contentDescription="@string/forward"
                app:tint="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingBottom="6dp"
            android:clickable="true"
            android:focusable="true">

            <ImageButton
                android:id="@+id/file"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/custom_ripple"
                android:src="@drawable/file"
                android:contentDescription="@string/app_name"
                app:tint="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:gravity="center"/>
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

</LinearLayout>
